Fix HTML encoding issues in index.html
I have added my complete name

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 <body>
     <div class="container">
         <header>
-            <h1>Shashank</h1>
+            <h1>Shashank Shekhar</h1>
             <p>PhD Researcher | SME & Manager | Educational Technology Expert</p>
         </header>
         
@@ -188,4 +188,5 @@
         </footer>
     </div>
 </body>
+
 </html>
